<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CIDDE Portico</string>
    <string name="title_activity_how_to">How To...</string>
    <string name="title_activity_how_to_view_pager">How To View Pager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cidde_troubleshoot">CiddeTroubleshootActivity</string>
    <string name="title_activity_cidde_help">CiddeHelpActivity</string>
    <string name="title_activity_cidde_submit_bug_report">CiddeSubmitBugReportActivity</string>
    <string name="title_activity_cidde_troubleshoot">Troubleshoot</string>
    <string name="title_activity_cidde_help">Help</string>
    <string name="title_activity_cidde_submit_bug_report">Submit Bug Report</string>
    <string name="title_activity_browse">Browse Equipment and Rooms</string>

    <!-- Tim's additions: -->
    <!-- Equipment info screen -->
    <string name="title_activity_equipment_info">EquipmentInfoActivity</string>
    <string name="equipment_info_string">Equipment Information</string>
    <string name="equipment_type_string">Projector</string>
    <string name="report_problem_equip_string">Report A Problem With This Piece Of Equipment</string>
    <string name="howto_setup_equip_string">How To Setup This Equipment</string>
    <string name="order_equip_string">Order This Piece of Equipment</string>
    <string name="add_equip_info_string">Equipment Information:</string>
    <string name="proj_info_string1">- Supports VGA, DVI, and HDMI</string>
    <string name="proj_info_string2">- Available for delivery? Yes</string>
    <string name="proj_info_string3">- Other equipment required: Screen, extension cord, VGA cable, laptop</string>
    <string name="proj_image">Picure of a projector</string>

    <!-- Classroom info screen -->
    <string name="title_activity_class_room_info">ClassRoomInfoActivity</string>
    <string name="classroom_info_string">Classroom Information</string>
    <string name="classroom_type_string">Cathedral 142</string>
    <string name="report_problem_classroom_string">Report A Problem With This Classroom</string>
    <string name="order_classroom_string">Order Something For This Classroom</string>
    <string name="add_classroom_info_string">Classroom Information:</string>
    <string name="yugoslav_info_string1">- Projector Installed? No</string>
    <string name="yugoslav_info_string2">- Number of Seats: 35</string>
    <string name="yugoslav_info_string3">- Windows? Yes</string>
    <string name="yugoslav_image">Picure of CL 142</string>
    <!-- -->
	
	<!-- Eimile's addition -->
	<string name="qr_code_info">QR code scanner functionality coming soon!</string>
	<!-- -->
</resources>
